clusters/production/prowlarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
spec:
  parentRefs:
    - name: https
      namespace: kgateway-system
  hostnames:
    - "prowlarr.production.rpcu.lan"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prowlarr-oauth2-proxy
          port: 80
